# ui_testing_moodle

./: .flake8  .pre-commit-config.yaml  .toml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
common/: constants.py
locators/: admin_console.py  login_page.py  profile_page.py
models/: add_course.py  auth.py  profile.py
pages/: application.py  base_page.py  crud_course.py  login_page.py  profile_page.py
tests/: test_add_course.py  test_auth.py  test_change_person_data.py
